LU-3325 ldlm: debug patch

debug patch to collect more info.

Change-Id: I350b672da672e206112b512b03599b57023a634d
Test-Parameters: envdefinitions=SLOW=yes,REQFAIL=100,RECOVERY_MDS_SCALE_EXCEPT=failover_ost clientdistro=el6 serverdistro=el6 clientarch=x86_64 serverarch=x86_64 clientcount=4 osscount=2 mdscount=2 austeroptions=-R failover=true useiscsi=true testlist=recovery-mds-scale
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>